correct sign in on mobile

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -106,6 +106,9 @@ header {
     &.schedule {
         background-color: #00e676;
     }
+    &.sign-in {
+         background-color:#3f51b5;
+    }
     
 
     width:100%;
